fixed spacing

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -127,6 +127,7 @@ small {
     .card {
       display: flex;
       margin-bottom: 3em;
+      min-height: 15em;
 
       @include mobile {
         width: 100%;
